[package]
name = "extreme-rust-kernel"
version = "0.1.0"
edition = "2021"

# bootloader 0.9.x is the version compatible with cargo-bootimage.
# It provides the entry_point! macro and the BootInfo structure used in
# kernel_main.
[dependencies]
bootloader = "0.9.23"
x86_64 = "0.15.0"
spin = "0.9.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.2"
volatile = "0.4.0"
bitflags = "2.6.0"
log = { version = "0.4.22", default-features = false }

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
lto = "thin"
opt-level = "s"
codegen-units = 1
strip = true

# cargo-bootimage reads this section for QEMU run/test arguments.
[package.metadata.bootimage]
run-args = [
    "-serial", "stdio",
    "-display", "none",
    "-m", "512M",
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-no-reboot",
]
test-args = [
    "-serial", "stdio",
    "-display", "none",
    "-m", "512M",
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-no-reboot",
]
test-success-exit-code = 33
